--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
     "ava": "^0.25.0",
-    "chalk": "^4.0.0",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.1",
@@ -34,8 +33,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
-    "log-symbols": "^4.0.0",
-    "node-emoji": "^1.10.0",
     "node-sass": "^4.9.2",
     "parcel": "^2.0.0-alpha.3.2",
     "parcel-plugin-static-files-copy": "^2.3.1",
@@ -44,23 +41,26 @@
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.1",
-    "xo": "^0.22.0"
+    "xo": "^0.22.0",
+    "react": "16.x",
+    "react-dom": "^16.4.2",
+    "react-spring": "^9.0.0-rc.3",
+    "parcel-bundler": "latest",
+    "axios": "^0.19.0-beta.1",
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^25.0.0"
   },
   "dependencies": {
-    "@elastic/datemath": "^5.0.3",
-    "@elastic/eui": "^25.0.0",
-    "axios": "^0.19.0-beta.1",
+    "node-emoji": "^1.10.0",
+    "log-symbols": "^4.0.0",
+    "chalk": "^4.0.0",
     "command-line-args": "^5.1.1",
     "command-line-usage": "^6.1.0",
     "jimp": "^0.12.1",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "ncp": "^2.0.0",
-    "p-settle": "^4.1.0",
-    "parcel-bundler": "latest",
-    "react": "16.x",
-    "react-dom": "^16.4.2",
-    "react-spring": "^9.0.0-rc.3"
+    "p-settle": "^4.1.0"
   },
   "repository": {
     "type": "git",
