--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Image comparison tool with a nice UI and diff features.",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build web/index.html",
+    "build": "parcel build web/index.html -d dist --no-source-maps",
     "start": "parcel serve web/index.html",
     "eslint": "eslint web",
     "eslint-fix": "eslint web --fix",
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.9.2",
-    "parcel": "^2.0.0-alpha.3.2",
+    "parcel": "^2.0.0-alpha.3.1",
     "parcel-plugin-static-files-copy": "^2.3.1",
     "sass": "^1.26.5",
     "standard-version": "^8.0.0",
