fix: main script fix

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "see-image-diff",
   "version": "0.1.6",
   "description": "Image comparison tool with a nice UI and diff features.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "build": "parcel build web/index.html --no-source-maps",
     "start": "parcel serve web/index.html",
