--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,11 +22,12 @@ jobs:
           npm ci
           rm -rf dist
           npm run build
-          npm run release
+          ls #see where the buil files are
       - name: Commit files
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
+          npm run release
           git push --follow-tags origin master
 
       - name: Push changes
