--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "default": "dist/index.html",
   "scripts": {
-    "build": "parcel build web/index.html --no-source-maps",
+    "build": "NODE_ENV=production parcel build --out-dir dist web/index.html --no-source-maps",
     "start": "parcel serve web/index.html",
     "eslint": "eslint web",
     "eslint-fix": "eslint web --fix",
@@ -35,7 +35,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.9.2",
-    "parcel": "^2.0.0-alpha.3.1",
+    "parcel": "^2.0.0-alpha.3.2",
     "parcel-plugin-static-files-copy": "^2.3.1",
     "sass": "^1.26.5",
     "standard-version": "^8.0.0",
