fix: fallback to parcel-bundler api

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           npm ci
           rm -rf dist
-          npm run build
+          npm run build-ci
           ls #see where the buil files are
       - name: Commit files
         run: |
