--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "author": "Ravi Dasari",
   "license": "MIT",
   "devDependencies": {
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^25.0.0",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
     "ava": "^0.25.0",
+    "axios": "^0.19.0-beta.1",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.1",
@@ -37,20 +40,20 @@
     "eslint-plugin-standard": "^4.0.1",
     "node-sass": "^4.9.2",
     "parcel": "^2.0.0-alpha.3.2",
+    "parcel-bundler": "latest",
     "parcel-plugin-static-files-copy": "^2.3.1",
+    "react": "16.x",
+    "react-dom": "^16.4.2",
+    "react-on-screen": "^2.1.1",
+    "react-spring": "^9.0.0-rc.3",
+    "react-stack-grid": "^0.7.1",
+    "react-vertical-timeline": "^0.2.0",
     "sass": "^1.26.5",
     "standard-version": "^8.0.0",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.1",
-    "xo": "^0.22.0",
-    "react": "16.x",
-    "react-dom": "^16.4.2",
-    "react-spring": "^9.0.0-rc.3",
-    "parcel-bundler": "latest",
-    "axios": "^0.19.0-beta.1",
-    "@elastic/datemath": "^5.0.3",
-    "@elastic/eui": "^25.0.0"
+    "xo": "^0.22.0"
   },
   "dependencies": {
     "node-emoji": "^1.10.0",
