--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.html",
   "default": "dist/index.html",
   "scripts": {
+    "clean": "rimraf dist temp",
     "build-ci": "NODE_ENV=production node ./scripts/buildApp.js",
     "build": "NODE_ENV=production parcel build --out-dir dist web/index.html --no-source-maps",
     "start": "parcel serve web/index.html",
-    "eslint": "eslint web",
+    "eslint": "eslint web tests",
     "eslint-fix": "eslint web --fix",
+    "test": "SEE_IMAGE_DIFF_NODE_ENV=test jest tests --runInBand",
     "release": "standard-version"
   },
   "keywords": [
@@ -27,10 +29,14 @@
   "devDependencies": {
     "@elastic/datemath": "^5.0.3",
     "@elastic/eui": "^25.0.0",
+    "@types/jest": "^26.0.0",
     "@types/react": "^16.4.9",
     "@types/react-dom": "^16.0.7",
     "ava": "^0.25.0",
     "axios": "^0.19.0-beta.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.7.2",
     "eslint": "^7.1.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.1",
@@ -38,18 +44,27 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^26.0.1",
+    "jest-environment-jsdom-sixteen": "1.0.3",
+    "jest-image-snapshot": "^4.0.2",
+    "jest-junit": "^10.0.0",
+    "jest-serializer-html": "6.0.0",
+    "node-cmd": "^3.0.0",
     "node-sass": "^4.9.2",
     "parcel": "^2.0.0-alpha.3.2",
     "parcel-bundler": "latest",
     "parcel-plugin-static-files-copy": "^2.3.1",
+    "puppeteer": "^4.0.0",
     "react": "16.x",
     "react-dom": "^16.4.2",
     "react-on-screen": "^2.1.1",
     "react-spring": "^9.0.0-rc.3",
     "react-stack-grid": "^0.7.1",
     "react-vertical-timeline": "^0.2.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.5",
     "standard-version": "^8.0.0",
+    "static-server": "^2.2.1",
     "tslint": "^5.11.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.0.1",
